--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/images/image-asset.jpeg":["assets/images/image-asset.jpeg"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/images/beautiful_country_road_tree_tunnel-wallpaper-5120x2880.jpg":["assets/images/beautiful_country_road_tree_tunnel-wallpaper-5120x2880.jpg"],"assets/images/image-asset.jpeg":["assets/images/image-asset.jpeg"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
