--- a/manifest.json
+++ b/manifest.json
@@ -1,32 +1,32 @@
 {
-    "name": "mathbridgeacademy",
-    "short_name": "mathbridgeacademy",
+    "name": "MathBridge Academy",
+    "short_name": "MathBridge Academy",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "To create a safe and transformative learning environment where students heal from the wounds inflicted by traditional schooling, rediscover the joy of learning, and build a confident and empowered relationship with Mathematics and themselves.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
         {
-            "src": "icons/Icon-192.png",
+            "src": "icons/favicon.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "icons/Icon-512.png",
+            "src": "icons/favicon.png",
             "sizes": "512x512",
             "type": "image/png"
         },
         {
-            "src": "icons/Icon-maskable-192.png",
+            "src": "icons/favicon.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "maskable"
         },
         {
-            "src": "icons/Icon-maskable-512.png",
+            "src": "icons/favicon.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "maskable"
